--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="index.js"></script>
     <!-- Title + Logo of the page (seen as text in the tab at the top of the screen in a browser)-->
     <title>How to Own a Dragon</title>
-    <link rel="icon" href="assets/Logo.png" type="image/png">
+    <link rel="icon" href="Assets/logo.png" type="image/png">
 </head>
 <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
     <!-- This is the Top Image -->
     <div class="top-image">
-        <img src="assets/emcatbanner-without-background.png" alt="makoPinkBanner" style="width: 100%;" style="height: 5%;"  />
+        <img src="Assets/emcatBannerWithoutBackground.png" alt="makoPinkBanner" style="width: 100%;" style="height: 5%;"  />
     </div>
     <!-- These are all the buttons below the Top Image -->
     <div class="all-button">
