--- a/wiki/dragons/Deadly Nadder/deadlyNadder.html
+++ b/wiki/dragons/Deadly Nadder/deadlyNadder.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../../commonwiki.css">
+        <link rel="stylesheet" href="../../commonWiki.css">
         <script src="../../../lang-loader.js"></script>
         <title>Deadly Nadder - HTOAD wiki</title>
     </head>
