--- a/wiki/dragons/Gronckle/gronckle.html
+++ b/wiki/dragons/Gronckle/gronckle.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../../commonwiki.css">
+        <link rel="stylesheet" href="../../commonWiki.css">
     <!-- Specify everything the code needs to read for wiki/categories/dragons/dragons.html to function properly-->
         <script src="../../../lang-loader.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
