--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
     <!-- This is the Top Image -->
     <div class="top-image">
-        <img src="Assets/emcatBannerWithoutBackground.png" alt="makoPinkBanner" style="width: 100%;" style="height: 5%;"  />
+        <img src="Assets/emcatBannerWithoutBackground.png" alt="emcatBannerWithoutBackground" style="width: 100%;" style="height: 5%;"  />
     </div>
     <!-- These are all the buttons below the Top Image -->
     <div class="all-button">
