--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -11,32 +11,30 @@
         <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> 
     Minecraft Mod. This page contains every single bit of information there is to know about the dragon in game. The subjects covered by this page are:
     </p>
-    <div class="toc"><div class="toctitle"><h2>Contents</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
+    <div class="toc"><h2>Contents</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
     <ul>
-    <li class="toclevel-1 tocsection-1"><a href="#Gronckle"><span class="tocnumber">1</span> <span class="toctext"><b>Gronckle</b></span></a>
+        <li class="toclevel-1 tocsection-1"><a href="#Gronckle"><b>Gronckle</b></a>
     <ul>
-    <li class="toclevel-2 tocsection-2"><a href="#Information"><span class="tocnumber">1.1</span> <span class="toctext"><b>Information</b></span></a></li>
-    <li class="toclevel-2 tocsection-3"><a href="#Known_Dragons"><span class="tocnumber">1.2</span> <span class="toctext"><b>Known Dragons</b></span></a></li>
+        <li class="toclevel-2 tocsection-2"><a href="#Information"><b>Information</b></a></li>
+        <li class="toclevel-2 tocsection-3"><a href="#Known_Dragons"><b>Known Dragons</b></a></li>
     </ul>
     </li>
-    <li class="toclevel-1 tocsection-4"><a href="#Spawning"><span class="tocnumber">2</span> <span class="toctext">Spawning</span></a>
+    <li class="toclevel-1 tocsection-4"><a href="#Spawning">Spawning</a>
     <ul>
-    <li class="toclevel-2 tocsection-5"><a href="#Colors"><span class="tocnumber">2.1</span> <span class="toctext">Colors</span></a></li>
+        <li class="toclevel-2 tocsection-5"><a href="#Colors">Colors</a></li>
     </ul>
     </li>
-    <li class="toclevel-1 tocsection-6"><a href="#Behaviour"><span class="tocnumber">3</span> <span class="toctext">Behaviour</span></a>
+    <li class="toclevel-1 tocsection-6"><a href="#Behaviour">Behaviour</a>
     <ul>
-    <li class="toclevel-2 tocsection-7"><a href="#Drops"><span class="tocnumber">3.1</span> <span class="toctext">Drops</span></a></li>
+        <li class="toclevel-2 tocsection-7"><a href="#Taming_&_Riding">Taming & Riding</a>
+        <li class="toclevel-2 tocsection-8"><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
+        <li class="toclevel-2 tocsection-9"><a href="#Abilities">Abilities</a></li>
+        <li class="toclevel-2 tocsection-10"><a href="#Drops">Drops</a></li>
     </ul>
     </li>
-    <li class="toclevel-1 tocsection-8"><a href="#Taming_&amp;_Riding"><span class="tocnumber">4</span> <span class="toctext">Taming &amp; Riding</span></a>
-    <ul>
-    <li class="toclevel-2 tocsection-9"><a href="#Breeding_&amp;_Growing"><span class="tocnumber">4.1</span> <span class="toctext">Breeding &amp; Growing</span></a></li>
-    </ul>
     </li>
-    <li class="toclevel-1 tocsection-10"><a href="#Abilities"><span class="tocnumber">5</span> <span class="toctext">Abilities</span></a></li>
-    <li class="toclevel-1 tocsection-11"><a href="#Gallery"><span class="tocnumber">6</span> <span class="toctext">Gallery</span></a></li>
-    <li class="toclevel-1 tocsection-12"><a href="#History"><span class="tocnumber">7</span> <span class="toctext">History</span></a></li>
+    <li class="toclevel-1 tocsection-11"><a href="#Gallery">Gallery</a></li>
+    <li class="toclevel-1 tocsection-12"><a href="#History">History</a></li>
     </ul>
     </div>
     
