--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -1,102 +1,132 @@
-<html class="client-js client-darkmode ve-available" lang="en" dir="ltr" webcrx=""><head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../commonwiki.css">
-    <title>Gronckle - How to Own a Dragon</title>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="../../commonwiki.css">
+        <title>Gronckle - How to Own a Dragon</title>
+    </head>
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
-    </div>
-    <div><h1><span class="mw-page-title-main">Gronckle</span></h1></div>
-    <p><i><b>The Gronckle</b></i> is a <b>Medium-sized 
-        <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder Class dragon</a>
-    </b> that appears in the 
-        <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> 
-    Minecraft Mod. This page contains every single bit of information there is to know about the dragon in game. The subjects covered by this page are:
-    </p>
-    <div class="toc"><h2>Contents</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
-    <ul>
-        <li class="toclevel-1 tocsection-1"><a href="#Gronckle"><b>Gronckle</b></a>
-    <ul>
-        <li class="toclevel-2 tocsection-2"><a href="#Information"><b>Information</b></a></li>
-        <li class="toclevel-2 tocsection-3"><a href="#Known_Dragons"><b>Known Dragons</b></a></li>
-    </ul>
-    </li>
-    <li class="toclevel-1 tocsection-4"><a href="#Spawning">Spawning</a>
-    <ul>
-        <li class="toclevel-2 tocsection-5"><a href="#Colors">Colors</a></li>
-    </ul>
-    </li>
-    <li class="toclevel-1 tocsection-6"><a href="#Behaviour">Behaviour</a>
-    <ul>
-        <li class="toclevel-2 tocsection-7"><a href="#Taming_&_Riding">Taming & Riding</a>
-        <li class="toclevel-2 tocsection-8"><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
-        <li class="toclevel-2 tocsection-9"><a href="#Abilities">Abilities</a></li>
-        <li class="toclevel-2 tocsection-10"><a href="#Drops">Drops</a></li>
-    </ul>
-    </li>
-    </li>
-    <li class="toclevel-1 tocsection-11"><a href="#Gallery">Gallery</a></li>
-    <li class="toclevel-1 tocsection-12"><a href="#History">History</a></li>
-    </ul>
-    </div>
+        <div><h1>Gronckle</h1></div>
+        <p><i><b>The Gronckle</b></i> is a <b>Medium-sized 
+            <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears in the 
+            <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
+            This page contains every single bit of information there is to know about the dragon in game. 
+            The subjects covered by this page are:
+        </p>
+        <div class="toc"><h2>Contents</h2><label class="toctogglelabel" for="toctogglecheckbox"></label></div>
+        <ul>
+            <li class="toclevel-1 tocsection-1"><a href="#Gronckle"><b>Gronckle</b></a>
+            <ul>
+                <li class="toclevel-2 tocsection-2"><a href="#Information"><b>Information</b></a></li>
+                <li class="toclevel-2 tocsection-3"><a href="#Known_Dragons"><b>Known Dragons</b></a></li>
+            </ul>
+
+            </li>
+            <li class="toclevel-1 tocsection-4"><a href="#Spawning">Spawning</a>
+            <ul>
+                <li class="toclevel-2 tocsection-5"><a href="#Colors">Colors</a></li>
+            </ul>
+            </li>
+
+            <li class="toclevel-1 tocsection-6"><a href="#Behaviour">Behaviour</a>
+                <ul>
+                    <li class="toclevel-2 tocsection-7"><a href="#Taming_&_Riding">Taming & Riding</a>
+                    <li class="toclevel-2 tocsection-8"><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
+                    <li class="toclevel-2 tocsection-9"><a href="#Abilities">Abilities</a></li>
+                    <li class="toclevel-2 tocsection-10"><a href="#Drops">Drops</a></li>
+                </ul>
+            </li>
+
+            <li class="toclevel-1 tocsection-11"><a href="#Gallery">Gallery</a></li>
+            <li class="toclevel-1 tocsection-12"><a href="#History">History</a></li>
+        </ul>
     
-    <table class="infotable">
-    <tbody>
-    <tr>
-    <th style="text-align: center">
-    <h1><span><b>Gronckle</b></span></h1>
-    </th></tr>
-    <tr>
-    <th style="text-align: center"><span><img alt="Purple Gronckle with a saddle" src="INSERT SOURCE IMAGE" width="300" height="203"></span>
-    </th></tr>
-    
-    <tr>
-    <td style="text-align: center">
-    <h2><span><b>Information</b></span></h2>
-    </td></tr>
-    <tr>
-    <td><b>Class: <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder</a></b>
-    </td></tr>
-    <tr>
-    <td><b>Colors:</b>
-    <ul><li><b>Blue</b></li>
-    <li><b>Orange</b></li>
-    <li><b>Purple</b></li>
-    <li><b>Brown</b></li></ul>
-    </td></tr>
-    <tr>
-    <td><b>Size:</b>
-    <ul><li><b>Length: 3.7 Blocks</b></li>
-    <li><b>Width: 2 Blocks</b></li>
-    <li><b>Height: 2.2 Blocks</b></li>
-    <li><b>Wingspan: 6.2 Blocks</b></li></ul>
-    </td></tr>
-    <tr>
-    <td><b>Hitboxes: 2 x 2 x 2 Blocks</b>
-    </td></tr>
-    <tr>
-    <td><b>Preferred Food:</b>
-    <ul><li><b>Stone</b></li>
-    <li><b>Deepslate</b></li>
-    <li><b>Cobblestone</b></li>
-    <li><b>Cobbled Deepslate</b></li>
-    <li><b>Sandstone</b></li>
-    <li><b>Andesite</b></li>
-    <li><b>Diorite</b></li>
-    <li><b>Granite</b></li>
-    <li><b>Cod</b></li>
-    <li><b>Salmon</b></li></ul>
-    </td></tr>
-    <tr>
-    <td><b>Spawn Biome:</b>
-    <ul><li><b><a rel="nofollow"href="https://minecraft.wiki/w/Plains">Plains</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Plains#Sunflower_Plains">Sunflower Plains</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Snowy_Plains">Snowy Plains</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills">Windswept Hills</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Forest">Windswept Forest</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Gravelly_Hills">Windswept Gravelly Hills</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Snowy_slopes">Snowy Slopes</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Stony_peaks">Stony Peaks</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Beach#Stony_Shore">Stony Shore</a></b></li>
-    <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Grove">Grove</a></b></li></ul>
+        <table class="infotable">
+            <tbody>
+                <tr>
+                    <th style="text-align: center">
+                        <h1><b>Gronckle</b></h1>
+                    </th>
+                </tr>
+
+                <tr>
+                    <th style="text-align: center">
+                        <img alt="Purple Gronckle with a saddle" src="INSERT SOURCE IMAGE" width="300" height="203">
+                    </th>
+                </tr>
+
+                <tr>
+                    <td style="text-align: center">
+                        <h2><span><b>Information</b></span></h2>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <b>Class: <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder</a></b>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <b>Colors:</b>
+                        <ul>
+                            <li><b>Blue</b></li>
+                            <li><b>Orange</b></li>
+                            <li><b>Purple</b></li>
+                            <li><b>Brown</b></li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <b>Size:</b>
+                        <ul>
+                            <li><b>Length: 3.7 Blocks</b></li>
+                            <li><b>Width: 2 Blocks</b></li>
+                            <li><b>Height: 2.2 Blocks</b></li>
+                            <li><b>Wingspan: 6.2 Blocks</b></li></ul>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <b>Hitboxes: 2 x 2 x 2 Blocks</b>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <b>Preferred Food:</b>
+                        <ul>
+                            <li><b>Stone</b></li>
+                            <li><b>Deepslate</b></li>
+                            <li><b>Cobblestone</b></li>
+                            <li><b>Cobbled Deepslate</b></li>
+                            <li><b>Sandstone</b></li>
+                            <li><b>Andesite</b></li>
+                            <li><b>Diorite</b></li>
+                            <li><b>Granite</b></li>
+                            <li><b>Cod</b></li>
+                            <li><b>Salmon</b></li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>
+                        <b>Spawn Biome:</b>
+                        <ul>
+                            <li><b><a rel="nofollow"href="https://minecraft.wiki/w/Plains">Plains</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Plains#Sunflower_Plains">Sunflower Plains</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Snowy_Plains">Snowy Plains</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills">Windswept Hills</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Forest">Windswept Forest</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Gravelly_Hills">Windswept Gravelly Hills</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Snowy_slopes">Snowy Slopes</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Stony_peaks">Stony Peaks</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Beach#Stony_Shore">Stony Shore</a></b></li>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Grove">Grove</a></b></li></ul>
     </td></tr>
     <tr>
     <td><b>Tameble:</b> <b>Yes</b>
