fixed css not being read, font still bugged

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -1,7 +1,12 @@
 <html lang="en">
+    <style>
+        body {
+            font-family: 'Uchen', serif ;
+        }
+    </style>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../../commonwiki.css">
+        <link rel="stylesheet" href="/wiki/commonwiki.css">
         <title>Gronckle - How to Own a Dragon</title>
     </head>
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
