added fontloader to copied code, still doesnt work

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -1,5 +1,17 @@
 <html lang="en">
     <style>
+        @font-face {
+            font-family: "Uchen", serif;
+                src: url('assets/Fonts/Uchen-Regular.ttf');
+                src: url('assets/Fonts/Uchen-Regular.eot');
+                src: url('assets/Fonts/Uchen-Regular.eot?#iefix') format('embedded-opentype'),
+                    url('assets/Fonts/Uchen-Regular.woff2') format('woff2'),
+                    url('assets/Fonts/Uchen-Regular.woff') format('woff'),
+                    url('/assets/Fonts/Uchen-Regular.svg#Uchen-Regular') format('svg');
+                font-weight: normal;
+                font-style: normal;
+                font-display: swap;
+        }
         body {
             font-family: 'Uchen', serif ;
         }
