Fixed file paths, font still bugged

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -1,24 +1,9 @@
 <html lang="en">
     <style>
-        @font-face {
-            font-family: "Uchen", serif;
-                src: url('assets/Fonts/Uchen-Regular.ttf');
-                src: url('assets/Fonts/Uchen-Regular.eot');
-                src: url('assets/Fonts/Uchen-Regular.eot?#iefix') format('embedded-opentype'),
-                    url('assets/Fonts/Uchen-Regular.woff2') format('woff2'),
-                    url('assets/Fonts/Uchen-Regular.woff') format('woff'),
-                    url('/assets/Fonts/Uchen-Regular.svg#Uchen-Regular') format('svg');
-                font-weight: normal;
-                font-style: normal;
-                font-display: swap;
-        }
-        body {
-            font-family: 'Uchen', serif ;
-        }
     </style>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/wiki/commonwiki.css">
+        <link rel="stylesheet" href="../wiki/commonwiki.css">
         <title>Gronckle - How to Own a Dragon</title>
     </head>
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
@@ -303,3 +288,4 @@
     </p><p class="mw-empty-elt">
     </p>
     </div>
+    </body>
