Moved around some files for a more clear folder structure

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -15,31 +15,23 @@
             The subjects covered by this page are:
         </p>
         <div class="toc"><h2>Contents</h2><label class="toctogglelabel" for="toctogglecheckbox"></label></div>
-        <ul>
-            <li class="toclevel-1 tocsection-1"><a href="#Gronckle"><b>Gronckle</b></a>
+            <li><a href="#Spawning">Spawning</a>
             <ul>
-                <li class="toclevel-2 tocsection-2"><a href="#Information"><b>Information</b></a></li>
-                <li class="toclevel-2 tocsection-3"><a href="#Known_Dragons"><b>Known Dragons</b></a></li>
-            </ul>
-
-            </li>
-            <li class="toclevel-1 tocsection-4"><a href="#Spawning">Spawning</a>
-            <ul>
-                <li class="toclevel-2 tocsection-5"><a href="#Colors">Colors</a></li>
+                <li><a href="#Colors">Colors</a></li>
             </ul>
             </li>
 
-            <li class="toclevel-1 tocsection-6"><a href="#Behaviour">Behaviour</a>
+            <li><a href="#Behaviour">Behaviour</a>
                 <ul>
-                    <li class="toclevel-2 tocsection-7"><a href="#Taming_&_Riding">Taming & Riding</a>
-                    <li class="toclevel-2 tocsection-8"><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
-                    <li class="toclevel-2 tocsection-9"><a href="#Abilities">Abilities</a></li>
-                    <li class="toclevel-2 tocsection-10"><a href="#Drops">Drops</a></li>
+                    <li><a href="#Taming_&_Riding">Taming & Riding</a>
+                    <li><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
+                    <li><a href="#Abilities">Abilities</a></li>
+                    <li><a href="#Drops">Drops</a></li>
                 </ul>
             </li>
 
-            <li class="toclevel-1 tocsection-11"><a href="#Gallery">Gallery</a></li>
-            <li class="toclevel-1 tocsection-12"><a href="#History">History</a></li>
+            <li><a href="#Gallery">Gallery</a></li>
+            <li><a href="#History">History</a></li>
         </ul>
     
         <table class="infotable">
@@ -87,7 +79,8 @@
                             <li><b>Length: 3.7 Blocks</b></li>
                             <li><b>Width: 2 Blocks</b></li>
                             <li><b>Height: 2.2 Blocks</b></li>
-                            <li><b>Wingspan: 6.2 Blocks</b></li></ul>
+                            <li><b>Wingspan: 6.2 Blocks</b></li>
+                        </ul>
                     </td>
                 </tr>
 
@@ -128,7 +121,8 @@
                             <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Snowy_slopes">Snowy Slopes</a></b></li>
                             <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Stony_peaks">Stony Peaks</a></b></li>
                             <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Beach#Stony_Shore">Stony Shore</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Grove">Grove</a></b></li></ul>
+                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Grove">Grove</a></b></li>
+                        </ul>
     </td></tr>
     <tr>
     <td><b>Tameble:</b> <b>Yes</b>
