--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -7,123 +7,115 @@
         <title>Gronckle - How to Own a Dragon</title>
     </head>
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
-        <div><h1>Gronckle</h1></div>
-        <p><i><b>The Gronckle</b></i> is a <b>Medium-sized 
-            <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears in the 
-            <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
-            This page contains every single bit of information there is to know about the dragon in game. 
-            The subjects covered by this page are:
-        </p>
-        <div class="toc"><h2>Contents</h2><label class="toctogglelabel" for="toctogglecheckbox"></label></div>
-            <li><a href="#Spawning">Spawning</a>
-            <ul>
-                <li><a href="#Colors">Colors</a></li>
-            </ul>
-            </li>
 
-            <li><a href="#Behaviour">Behaviour</a>
-                <ul>
-                    <li><a href="#Taming_&_Riding">Taming & Riding</a>
-                    <li><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
-                    <li><a href="#Abilities">Abilities</a></li>
-                    <li><a href="#Drops">Drops</a></li>
-                </ul>
-            </li>
+        <div class="content">
+            <div><h1>Gronckle</h1></div>
 
-            <li><a href="#Gallery">Gallery</a></li>
-            <li><a href="#History">History</a></li>
-        </ul>
+            <p><i><b>The Gronckle</b></i> is a <b>Medium-sized 
+                <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears
+                in the <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
+                This page contains every single bit of information there is to know about the dragon in game. 
+                The subjects covered by this page are:
+            </p>
+
+            <div class="toc">
+                <div class="toctitle"><h2>Contents</h2><label class="toctogglelabel" for="toctogglecheckbox"></label></div>
+                    <li><a href="#Spawning">Spawning</a>
+                        <ul>
+                            <li><a href="#Colors">Colors</a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="#Behaviour">Behaviour</a>
+                        <ul>
+                            <li><a href="#Taming_&_Riding">Taming & Riding</a>
+                            <li><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
+                            <li><a href="#Abilities">Abilities</a></li>
+                            <li><a href="#Drops">Drops</a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="#Gallery">Gallery</a></li>
+                    <li><a href="#History">History</a></li>
+            </div>
     
-        <table class="infotable">
-            <tbody>
-                <tr>
-                    <th style="text-align: center">
-                        <h1><b>Gronckle</b></h1>
-                    </th>
-                </tr>
+            <table class="infotable">
+                <tbody>
+                    <tr>
+                        <th style="text-align: center"><h1><b>Gronckle</b></h1></th>
+                    </tr>
 
-                <tr>
-                    <th style="text-align: center">
-                        <img alt="Purple Gronckle with a saddle" src="INSERT SOURCE IMAGE" width="300" height="203">
-                    </th>
-                </tr>
+                    <tr>
+                        <th style="text-align: center"><img alt="Purple Gronckle with a saddle" src="INSERT SOURCE IMAGE" width="300" height="203"></th>
+                    </tr>
 
-                <tr>
-                    <td style="text-align: center">
-                        <h2><span><b>Information</b></span></h2>
-                    </td>
-                </tr>
+                    <tr>
+                        <td style="text-align: center"><h2><span><b>Information</b></span></h2></td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <b>Class: <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder</a></b>
-                    </td>
-                </tr>
+                    <tr>
+                        <td><b>Class: <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder</a></b></td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <b>Colors:</b>
-                        <ul>
-                            <li><b>Blue</b></li>
-                            <li><b>Orange</b></li>
-                            <li><b>Purple</b></li>
-                            <li><b>Brown</b></li>
-                        </ul>
-                    </td>
-                </tr>
+                    <tr>
+                        <td><b>Colors:</b>
+                            <ul>
+                                <li><b>Blue</b></li>
+                                <li><b>Orange</b></li>
+                                <li><b>Purple</b></li>
+                                <li><b>Brown</b></li>
+                            </ul>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <b>Size:</b>
-                        <ul>
-                            <li><b>Length: 3.7 Blocks</b></li>
-                            <li><b>Width: 2 Blocks</b></li>
-                            <li><b>Height: 2.2 Blocks</b></li>
-                            <li><b>Wingspan: 6.2 Blocks</b></li>
-                        </ul>
-                    </td>
-                </tr>
+                    <tr>
+                        <td><b>Size:</b>
+                            <ul>
+                                <li><b>Length: 3.7 Blocks</b></li>
+                                <li><b>Width: 2 Blocks</b></li>
+                                <li><b>Height: 2.2 Blocks</b></li>
+                                <li><b>Wingspan: 6.2 Blocks</b></li>
+                            </ul>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <b>Hitboxes: 2 x 2 x 2 Blocks</b>
-                    </td>
-                </tr>
+                    <tr>
+                        <td><b>Hitboxes: 2 x 2 x 2 Blocks</b></td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <b>Preferred Food:</b>
-                        <ul>
-                            <li><b>Stone</b></li>
-                            <li><b>Deepslate</b></li>
-                            <li><b>Cobblestone</b></li>
-                            <li><b>Cobbled Deepslate</b></li>
-                            <li><b>Sandstone</b></li>
-                            <li><b>Andesite</b></li>
-                            <li><b>Diorite</b></li>
-                            <li><b>Granite</b></li>
-                            <li><b>Cod</b></li>
-                            <li><b>Salmon</b></li>
-                        </ul>
-                    </td>
-                </tr>
+                    <tr>
+                        <td><b>Preferred Food:</b>
+                            <ul>
+                                <li><b>Stone</b></li>
+                                <li><b>Deepslate</b></li>
+                                <li><b>Cobblestone</b></li>
+                                <li><b>Cobbled Deepslate</b></li>
+                                <li><b>Sandstone</b></li>
+                                <li><b>Andesite</b></li>
+                                <li><b>Diorite</b></li>
+                                <li><b>Granite</b></li>
+                                <li><b>Cod</b></li>
+                                <li><b>Salmon</b></li>
+                            </ul>
+                        </td>
+                    </tr>
 
-                <tr>
-                    <td>
-                        <b>Spawn Biome:</b>
-                        <ul>
-                            <li><b><a rel="nofollow"href="https://minecraft.wiki/w/Plains">Plains</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Plains#Sunflower_Plains">Sunflower Plains</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Snowy_Plains">Snowy Plains</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills">Windswept Hills</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Forest">Windswept Forest</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Gravelly_Hills">Windswept Gravelly Hills</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Snowy_slopes">Snowy Slopes</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Stony_peaks">Stony Peaks</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Beach#Stony_Shore">Stony Shore</a></b></li>
-                            <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Grove">Grove</a></b></li>
-                        </ul>
-    </td></tr>
+                    <tr>
+                        <td><b>Spawn Biomes:</b>
+                            <ul>
+                                <li><b><a rel="nofollow"href="https://minecraft.wiki/w/Plains">Plains</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Plains#Sunflower_Plains">Sunflower Plains</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Snowy_Plains">Snowy Plains</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills">Windswept Hills</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Forest">Windswept Forest</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Windswept_Hills#Windswept_Gravelly_Hills">Windswept Gravelly Hills</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Snowy_slopes">Snowy Slopes</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Stony_peaks">Stony Peaks</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Beach#Stony_Shore">Stony Shore</a></b></li>
+                                <li><b><a rel="nofollow" href="https://minecraft.wiki/w/Mountains#Grove">Grove</a></b></li>
+                            </ul>
+                        </td>
+                    </tr>
     <tr>
     <td><b>Tameble:</b> <b>Yes</b>
     </td></tr>
@@ -137,33 +129,38 @@
     <li>Shattermaster</li>
     <li>Fishmeat</li></ul>
     </td></tr>
-    </tbody>
-</table>
-    <h1><span>Spawning</span></h1>
-    <p>The Gronckle is a fairly common dragon. It usually spawns in groups of 4 in the following biomes:
-    </p>
-    <ul><li>Plains</li>
-    <li>Sunflower Plains</li>
-    <li>Snowy Plains</li>
-    <li>Windswept Hills</li>
-    <li>Windswept Forest</li>
-    <li>Windswept Gravelly Hills</li>
-    <li>Snowy Slopes</li>
-    <li>Stony Peaks</li>
-    <li>Stony Shore</li>
-    <li>Grove</li></ul>
-    <h3><span>Colors</span></h3>
-    <p>The Gronckle can spawn in a variety of different colors, including:
-    </p>
-    <ul><li>Blue</li>
-    <li>Orange</li>
-    <li>Purple</li>
-    <li>Brown (Doesn't spawn naturally, will be elaborated on later in the development)</li></ul>
+                </tbody>
+            </table>
+
+            <h1><span>Spawning</span></h1>
+            <p>The Gronckle is a fairly common dragon. It usually spawns in groups of 4 in the following biomes:
+            </p>
+            <ul>
+        <li>Plains</li>
+        <li>Sunflower Plains</li>
+        <li>Snowy Plains</li>
+        <li>Windswept Hills</li>
+        <li>Windswept Forest</li>
+        <li>Windswept Gravelly Hills</li>
+        <li>Snowy Slopes</li>
+        <li>Stony Peaks</li>
+        <li>Stony Shore</li>
+        <li>Grove</li>
+            </ul>
+            <h3><span>Colors</span></h3>
+            <p>The Gronckle can spawn in a variety of different colors, including:
+            </p>
+            <ul>
+        <li>Blue</li>
+        <li>Orange</li>
+        <li>Purple</li>
+        <li>Brown (Doesn't spawn naturally, will be elaborated on later in the development)</li>
+            </ul>
     <p>The pictures of these versions can be found in the gallery at the bottom of this page
     </p>
     <h1><span>Behaviour</span></h1>
-    <p>Gronckles are quite peaceful in general. They just wander around in groups, doing nothing. 
-    </p><p>Their behaviour will be expanded on in a later update.
+    <p>Gronckles are quite peaceful in general. They just wander around in groups, doing nothing. </p>
+    <p>Their behaviour will be expanded on in a later update.
     </p>
     <h3><span>Drops</span></h3>
     <p>When killed, the Gronckle drops scales depending on their current growth stage.
@@ -281,5 +278,6 @@
     </p><p class="mw-empty-elt">
     </p><p class="mw-empty-elt">
     </p>
+    </div>
     </div>
     </body>
