modified TOC styling

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -21,13 +21,12 @@
             <div class="toc">
                 <div class="toctitle"><h2>Contents</h2><label class="toctogglelabel" for="toctogglecheckbox"></label></div>
                     <li><a href="#Spawning">Spawning</a>
-                        <ul>
+                        <ul class="tocsublist">
                             <li><a href="#Colors">Colors</a></li>
                         </ul>
                     </li>
-
                     <li><a href="#Behaviour">Behaviour</a>
-                        <ul>
+                        <ul class="tocsublist">
                             <li><a href="#Taming_&_Riding">Taming & Riding</a>
                             <li><a href="#Breeding_&_Growing">Breeding & Growing</a></li>
                             <li><a href="#Abilities">Abilities</a></li>
