Moved 1 subcategory to fit more logically n the page

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -146,6 +146,15 @@
                         <li>Stony Shore</li>
                         <li>Grove</li>
                     </ul>
+                <h3><span>Colors</span></h3>
+                    <p>The Gronckle can spawn in a variety of different colors, including:</p>
+                    <ul>
+                        <li>Blue</li>
+                        <li>Orange</li>
+                        <li>Purple</li>
+                        <li>Brown (Doesn't spawn naturally, will be elaborated on later in the development)</li>
+                    </ul>
+                    <p>The pictures of these versions can be found in the gallery at the bottom of this page</p>
                 <h3><span>Drops</span></h3>
                     <p>When killed, the Gronckle drops scales depending on their current growth stage.</p>
                     <table class="wikitable">
@@ -173,16 +182,6 @@
             <h2><span>Behaviour</span></h2>
                 <p>Gronckles are quite peaceful in general. They just wander around in groups, doing nothing. </p>
                 <p>Their behaviour will be expanded on in a later update.</p>
-                <h3><span>Colors</span></h3>
-                    <p>The Gronckle can spawn in a variety of different colors, including:
-                    </p>
-                    <ul>
-                        <li>Blue</li>
-                        <li>Orange</li>
-                        <li>Purple</li>
-                        <li>Brown (Doesn't spawn naturally, will be elaborated on later in the development)</li>
-                    </ul>
-                    <p>The pictures of these versions can be found in the gallery at the bottom of this page</p>
             <h2><span>Taming & Riding</span></h2>
                 <p>To tame a Gronckle, right-click the Gronckle a couple of times with one of the following items:</p>
                 <ul>
