removed any reference to miraheze

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -250,7 +250,7 @@
                     before it can fire again.
                 </p>
 
-            <h2><span class="mw-headline" id="History">History</span></h2>
+            <h2><span class="headline" id="History">History</span></h2>
                 <div style="height:fit-content; width:fit-content;">
                     <ul>
                         <li>Alpha 0.0.1
@@ -259,7 +259,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="mw-empty-elt"></p>
+                    <p class="empty"></p>
                     <ul>
                         <li>Alpha 0.0.2
                             <ul>
@@ -271,7 +271,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="mw-empty-elt"></p>
+                    <p class="empty"></p>
                     <ul>
                         <li>Alpha 0.0.3
                             <ul>
@@ -282,7 +282,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="mw-empty-elt"></p>
+                    <p class="empty"></p>
                     <ul>
                         <li>Alpha 0.0.4
                             <ul>
@@ -290,7 +290,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="mw-empty-elt"></p>
+                    <p class="empty"></p>
                     <ul>
                         <li>Alpha 0.0.5
                             <ul>
@@ -298,7 +298,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="mw-empty-elt"></p>
+                    <p class="empty"></p>
                     <ul>
                         <li>Alpha 0.0.6
                             <ul>
@@ -306,10 +306,10 @@
                             </ul>
                         </li>
                     </ul>
-                    <p class="mw-empty-elt"></p>
-                    <p class="mw-empty-elt"></p>
-                    <p class="mw-empty-elt"></p>
-                    <p class="mw-empty-elt"></p>
+                    <p class="empty"></p>
+                    <p class="empty"></p>
+                    <p class="empty"></p>
+                    <p class="empty"></p>
                 </div>
         </div>
     </body>
