added pages for all the dragon classes (no content yet)

--- a/Miraheze/groncklecodecopiedfromMH.html
+++ b/Miraheze/groncklecodecopiedfromMH.html
@@ -11,8 +11,9 @@
         <div class="content">
             <div><h1>Gronckle</h1></div>
 
-            <p class="body"><i><b>The Gronckle</b></i> is a <b>Medium-sized 
-                <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears
+            <p>
+                <i><b>The Gronckle</b></i> is a <b>Medium-sized 
+                <a href= "/Wiki/Categories/Dragons/Classes/Boulder/class.html" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears
                 in the <a href="/wiki/Main_Page" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
                 This page contains every single bit of information there is to know about the dragon in game. 
                 The subjects covered by this page are:
