Changed title of pages to specify the wiki & removed all code from empty pages to make template pasting easier

--- a/wiki/main_page.html
+++ b/wiki/main_page.html
@@ -9,14 +9,14 @@
         <script src="../lang-loader.js"></script>
         <script src="wiki.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
-        <title>Main Page - HTOAD wiki</title>
+        <title>Main Page - How to Own a Dragon Wiki</title>
     </head>
 <!-- End of required stuff for every page-->
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
         <header>
             <h1 id="main-page-title"></h1>
         </header>
-        
+
     <div class="gronckle">
     <a href="#" class="wiki-button" onclick="redirectToGronckle()">Gronckle</a>
     </div>
