Fixed wiki redirect button & added js file for toc

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>   
         <!-- Wiki Button -->
         <div class="wiki-button-div">
-            <a href="#" class="wiki-button" onclick="redirectToWiki()">Wiki</a>
+            <a href="#" class="wiki-button" onclick="RedirectToWiki()">Wiki</a>
         </div>
         <!-- Donate Button -->
         <div class="donate-button-div">
