Changed Folder Structure

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
         <script src="/Wiki/toc.js"></script>
         <script src="/lang-loader.js"></script>
+        <script src="/Wiki/redirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
     </head>
 <!-- End of required stuff for every page-->
@@ -21,7 +22,7 @@
             <div><h1>Gronckle</h1></div>
             <p> <!-- Short Introduction to the dragon (1 paragraph, no more, no less.) -->
                 <i><b>The Gronckle</b></i> is a <b>medium-sized 
-                <a href= "/Wiki/Categories/Dragons/Classes/Boulder/class.html" title="Category:Boulder Class">Boulder Class dragon</a></b> that appears
+                <a href= "#" onclick="redirectToBoulderClass()">Boulder Class dragon</a></b> that appears
                 in the <a href="/wiki/main_page.html" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
                 This page contains every single bit of information there is to know about the dragon in game. 
                 The subjects covered by this page are:
