Made js file for all redirect funtions to be called from and defined in

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -10,20 +10,20 @@
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
         <script src="/Wiki/toc.js"></script>
         <script src="/lang-loader.js"></script>
-        <script src="/Wiki/redirects.js"></script>
+        <script src="/Wiki/wikiredirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
     </head>
 <!-- End of required stuff for every page-->
 
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
 
-        <div id="content"  class="content">
+        <div id="content" class="content">
 
             <div><h1>Gronckle</h1></div>
             <p> <!-- Short Introduction to the dragon (1 paragraph, no more, no less.) -->
                 <i><b>The Gronckle</b></i> is a <b>medium-sized 
-                <a href= "#" onclick="redirectToBoulderClass()">Boulder Class dragon</a></b> that appears
-                in the <a href="/wiki/main_page.html" title="Main Page">How to Own a Dragon</a> Minecraft Mod. 
+                <a class="redirect" onclick="RedirectToBoulderClass()">Boulder Class dragon</a></b> that appears
+                in the <a class="redirect" onclick="RedirectToWikiMainPage()">How to Own a Dragon</a> Minecraft Mod. 
                 This page contains every single bit of information there is to know about the dragon in game. 
                 The subjects covered by this page are:
             </p>
