--- a/Wiki/wiki.html
+++ b/Wiki/wiki.html
@@ -7,7 +7,7 @@
     <!-- Specify everything the code needs to read for wiki/wiki.html to function properly-->
     <link rel="stylesheet" href="wiki.css">
         <script src="../lang-loader.js"></script>
-        <script src="wiki.js"></script>
+        <script src="wikiredirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
         <title>Main Page - How to Own a Dragon Wiki</title>
     </head>
@@ -18,7 +18,7 @@
         </header>
 
     <div class="gronckle">
-    <a href="#" class="wiki-button" onclick="redirectToGronckle()">Gronckle</a>
+    <a onclick="RedirectToDragons()">Dragons</a>
     </div>
     </body>
 </html>
