--- a/Wiki/Dragons/Boulder/class.html
+++ b/Wiki/Dragons/Boulder/class.html
@@ -1,1 +1,16 @@
-<!--meant for the subcategory of the boulder class-->
+<!-- Required for every page-->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
+        <title>Boulder Class - How to Own a Dragon Wiki</title>
+    <!-- External CSS file(s) & JS Scripts -->
+        <link rel="stylesheet" href="/Wiki/commonwiki.css">
+        <script src="/Wiki/toc.js"></script>
+        <script src="/lang-loader.js"></script>
+        <script src="/Wiki/wikiredirects.js"></script>
+    <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
+    </head>
+<!-- End of required stuff for every page-->
