--- a/Wiki/Dragons/dragons.html
+++ b/Wiki/Dragons/dragons.html
@@ -4,17 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../../commonwiki.css">
-    <!-- Specify everything the code needs to read for wiki/categories/dragons/dragons.html to function properly-->
-        <script src="../../lang-loader.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
-        <title>Dragons - HTOAD wiki</title>
+        <title>Dragons - How to Own a Dragon Wiki</title>
+    <!-- External CSS file(s) & JS Scripts -->
+        <link rel="stylesheet" href="/Wiki/commonwiki.css">
+        <script src="/Wiki/toc.js"></script>
+        <script src="/lang-loader.js"></script>
+        <script src="/Wiki/wikiredirects.js"></script>
+    <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
     </head>
 <!-- End of required stuff for every page-->
-    <body>
-        <header>
-            <h1></h1> 
-        </header>
-
-    </body>
-</html>
