Added all redirects needed in gronckle.html

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -46,7 +46,7 @@
                     </tr>
 
                     <tr>
-                        <td><b>Class: <a href="/wiki/Category:Boulder_Class" title="Category:Boulder Class">Boulder</a></b></td>
+                        <td><b>Class: <a class="redirect" onclick="RedirectToBoulderClass()">Boulder</a></b></td>
                     </tr>
 
                     <tr>
