unbolded infobox text

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -52,10 +52,10 @@
                     <tr>
                         <td><b>Colors:</b>
                             <ul> <!-- Every possible color of the dragon in the mod-->
-                                <li><b>Blue</b></li>
-                                <li><b>Orange</b></li>
-                                <li><b>Purple</b></li>
-                                <li><b>Brown (doesn't spawn naturally)</b></li>
+                                <li>Blue</li>
+                                <li>Orange</li>
+                                <li>Purple</li>
+                                <li>Brown (doesn't spawn naturally)</li>
                             </ul>
                         </td>
                     </tr>
@@ -63,31 +63,31 @@
                     <tr>
                         <td><b>Size:</b>
                             <ul> <!-- Size measured in BlockBench -->
-                                <li><b>Length: 3.7 Blocks</b></li>
-                                <li><b>Width: 2 Blocks</b></li>
-                                <li><b>Height: 2.2 Blocks</b></li>
-                                <li><b>Wingspan: 6.2 Blocks</b></li>
+                                <li>Length: 3.7 Blockss</li>
+                                <li>Width: 2 Blocks</li>
+                                <li>Height: 2.2 Blocks</li>
+                                <li>Wingspan: 6.2 Blocks</li>
                             </ul>
                         </td>
                     </tr>
 
                     <tr> <!-- Hitbox taken from MCreator entity file-->
-                        <td><b>Hitboxes: 2 x 2 x 2 Blocks</b></td>
+                        <td><b>Hitboxes:</b> 2 x 2 x 2 Blocks</td>
                     </tr>
 
                     <tr>
                         <td><b>Preferred Food:</b>
                             <ul>    <!-- Food to give for either Breeding or Growing-->
-                                <li><b>Stone</b></li>
-                                <li><b>Deepslate</b></li>
-                                <li><b>Cobblestone</b></li>
-                                <li><b>Cobbled Deepslate</b></li>
-                                <li><b>Sandstone</b></li>
-                                <li><b>Andesite</b></li>
-                                <li><b>Diorite</b></li>
-                                <li><b>Granite</b></li>
-                                <li><b>Cod</b></li>
-                                <li><b>Salmon</b></li>
+                                <li>Stone</li>
+                                <li>Deepslate</li>
+                                <li>Cobblestone</li>
+                                <li>Cobbled Deepslate</li>
+                                <li>Sandstone</li>
+                                <li>Andesite</li>
+                                <li>Diorite</li>
+                                <li>Granite</li>
+                                <li>Cod</li>
+                                <li>Salmon</li>
                             </ul>
                         </td>
                     </tr>
