--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
         <script src="/Wiki/toc.js"></script>
         <script src="/Wiki/history.js">
-            
         </script>
         <script src="/lang-loader.js"></script>
         <script src="/Wiki/wikiredirects.js"></script>
@@ -252,67 +251,16 @@
                     before it can fire again.
                 </p>
 
-            <div class="History"><h2><span class="headline" id="History">History</span></h2>
-                <div style="height:fit-content; width:fit-content;">
-                    <ul>
-                        <li>Alpha 0.0.1
-                            <ul>
-                                <li>Introduced</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <p class="empty"></p>
-                    <ul>
-                        <li>Alpha 0.0.2
-                            <ul>
-                                <li>The Gronckle is now Breedable</li>
-                                <li>The Gronckle has growing stages now</li>
-                                <li>The Gronckle has an Egg now</li>
-                                <li>Made Female and Male Gronckles seperate entities</li>
-                                <li>Sandstone is now also a Taming Item</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <p class="empty"></p>
-                    <ul>
-                        <li>Alpha 0.0.3
-                            <ul>
-                                <li>The Gronckle has GUI's now</li>
-                                <li>The Gronckle now has a fireball attack</li>
-                                <li>The Gronckle now has a saddle</li>
-                                <li>Made some slight changes to the Gronckle's AI</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <p class="empty"></p>
-                    <ul>
-                        <li>Alpha 0.0.4
-                            <ul>
-                                <li>Fixed some minor bugs regarding the Gronckle</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <p class="empty"></p>
-                    <ul>
-                        <li>Alpha 0.0.5
-                            <ul>
-                                <li>Completely reworked the Gronckle code</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <p class="empty"></p>
-                    <ul>
-                        <li>Alpha 0.0.6
-                            <ul>
-                                <li>Optimized Breeding</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <p class="empty"></p>
-                    <p class="empty"></p>
-                    <p class="empty"></p>
-                    <p class="empty"></p>
-                </div>
+            <div id="History">
+                <script>
+                    const headers = ["Alpha:", "Changes:",];
+                    const data = [
+                        ["John Doe","New York"],
+                        ["Jane Doe","Los Angeles"]
+                    ];
+
+                    generateHistory(headers, data);
+                </script>
             </div>
         </div>
 
