fixed collapsable history, doesnt have animation

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -253,10 +253,11 @@
 
             <div id="History">
                 <script>
-                    const headers = ["Alpha:", "Changes:",];
+                    const headers = ["Version:", "Changes:"];
                     const data = [
-                        ["John Doe","New York"],
-                        ["Jane Doe","Los Angeles"]
+                        ["0.0.1","Introduced"],
+                        ["0.0.2","Gronckle is now Breedable"],
+                        ["","Gronckle now has growing stages"],
                     ];
 
                     generateHistory(headers, data);
@@ -264,11 +265,9 @@
             </div>
         </div>
 
-        <div class="toc">
             <script>
                 createTableOfContents();
             </script>
-        </div>
     </body>
 </html>
     
