Completed Gronckle History

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -256,8 +256,23 @@
                     const headers = ["Version:", "Changes:"];
                     const data = [
                         ["0.0.1","Introduced"],
-                        ["0.0.2","Gronckle is now Breedable"],
-                        ["","Gronckle now has growing stages"],
+
+                        ["0.0.2","The Gronckle is now Breedable"],
+                        ["","The Gronckle now has growing stages"],
+                        ["", "Female Gronckles now lays an egg after breeding"],
+                        ["", "Male and Female Gronckles are now seperate entities"],
+                        ["", "Added Sandstone to the list of breeding items"],
+
+                        ["0.0.3", "Added a GUI to the Gronckle"],
+                        ["", "Added a fireball attack ability for the Gronckle"],
+                        ["", "Added Gronckle Saddle"],
+                        ["", "Tweaked the Gronckle's AI"],
+
+                        ["0.0.4", "Fixed some bugs regarding the Gronckle"],
+
+                        ["0.0.5", "Completely reworked the Gronckle's code"],
+
+                        ["0.0.6", "Optimized the breeding"],
                     ];
 
                     generateHistory(headers, data);
