--- a/Wiki/wiki.html
+++ b/Wiki/wiki.html
@@ -4,12 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Specify everything the code needs to read for wiki/wiki.html to function properly-->
-    <link rel="stylesheet" href="wiki.css">
-        <script src="../lang-loader.js"></script>
-        <script src="wikiredirects.js"></script>
+    <!-- External CSS file(s) & JS Scripts -->
+        <link rel="stylesheet" href="/Wiki/commonwiki.css">
+        <script src="/Wiki/toc.js"></script>
+        <script src="/Wiki/history.js"></script>
+        <script src="/lang-loader.js"></script>
+        <script src="/Wiki/wikiredirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
-        <title>Main Page - How to Own a Dragon Wiki</title>
+    <title>Main Page - How to Own a Dragon Wiki</title>
     </head>
 <!-- End of required stuff for every page-->
     <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
@@ -17,7 +19,7 @@
             <h1 id="main-page-title"></h1>
         </header>
 
-    <div class="gronckle">
+    <div class="Gronckle">
     <a onclick="RedirectToDragons()">Dragons</a>
     </div>
     </body>
