Added content to some categories, and fixed redirect to Gronckle page to not be a relative path

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -15,11 +15,13 @@
     </head>
 <!-- End of required stuff for every page-->
 
-    <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
+    <body>
 
         <div id="content" class="content">
 
-            <div><h1>Gronckle</h1></div>
+            <header>
+                <h1>Gronckle</h1>
+            </header>
             <p> <!-- Short Introduction to the dragon (1 paragraph, no more, no less.) -->
                 <i><b>The Gronckle</b></i> is a <b>medium-sized 
                 <a class="redirect" onclick="RedirectToBoulderClass()">Boulder Class dragon</a></b> that appears
