--- a/Wiki/wiki.html
+++ b/Wiki/wiki.html
@@ -14,13 +14,15 @@
     <title>Main Page - How to Own a Dragon Wiki</title>
     </head>
 <!-- End of required stuff for every page-->
-    <body style="background-color: rgb(26, 26, 26); color: whitesmoke;">
-        <header>
-            <h1 id="main-page-title"></h1>
-        </header>
+    <body>
+        <div id="content" class="content">
+            <header>
+                <h1>How to Own a Dragon</h1>
 
-    <div class="Gronckle">
-    <a onclick="RedirectToDragons()">Dragons</a>
-    </div>
+            </header>
+
+        <div class="Gronckle">
+            <a onclick="RedirectToDragons()">Dragons</a>
+        </div>
     </body>
 </html>
