--- a/Wiki/Dragons/dragons.html
+++ b/Wiki/Dragons/dragons.html
@@ -4,13 +4,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
-        <title>Dragons - How to Own a Dragon Wiki</title>
     <!-- External CSS file(s) & JS Scripts -->
         <link rel="stylesheet" href="/Wiki/commonwiki.css">
         <script src="/Wiki/toc.js"></script>
+        <script src="/Wiki/history.js"></script>
         <script src="/lang-loader.js"></script>
         <script src="/Wiki/wikiredirects.js"></script>
     <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
+    <title>Dragons - How to Own a Dragon Wiki</title>
     </head>
 <!-- End of required stuff for every page-->
+    <body>
+        <div id="content" class="content">
+            <header>
+                <h1>Dragons</h1>
+                
+            </header>
+
+        <div class="Gronckle">
+            <a onclick="RedirectToBoulderClass()">Boulder Class</a>
+        </div>
+        <div>
+            <a onclick="RedirectToGronckle()">Gronckle</a>
+        </div>
+    </body>
+</html>
