Added working redirects to every page that needs them

--- a/Wiki/Dragons/Tracker/class.html
+++ b/Wiki/Dragons/Tracker/class.html
@@ -1,1 +1,28 @@
-<!--meant for the subcategory of the Tracker class-->
+<!-- Required for every page-->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- External CSS file(s) & JS Scripts -->
+        <link rel="stylesheet" href="/Wiki/commonwiki.css">
+        <script src="/Wiki/toc.js"></script>
+        <script src="/Wiki/history.js"></script>
+        <script src="/lang-loader.js"></script>
+        <script src="/Wiki/wikiredirects.js"></script>
+    <!-- Title of the page (seen as text in the tab at the top of the screen in a browser)-->
+    <title>Tracker Class - How to Own a Dragon Wiki</title>
+    </head>
+<!-- End of required stuff for every page-->
+    <body>
+        <div id="content" class="content">
+            <header>
+                <h1>Tracker Class</h1>
+                
+            </header>
+
+        <div>
+            <a onclick="RedirectToNadder()">Deadly Nadder</a>
+        </div>
+    </body>
+</html>
