--- a/Wiki/Dragons/dragons.html
+++ b/Wiki/Dragons/dragons.html
@@ -21,11 +21,29 @@
                 
             </header>
 
-        <div class="Gronckle">
-            <a onclick="RedirectToBoulderClass()">Boulder Class</a>
-        </div>
-        <div>
-            <a onclick="RedirectToGronckle()">Gronckle</a>
+            <div class="Gronckle">
+                <a onclick="RedirectToBoulderClass()">Boulder Class</a>
+                <br>
+                <a onclick="RedirectToMysteryClass()">Mystery Class</a>
+                <br>
+                <a onclick="RedirectToSharpClass()">Sharp Class</a>
+                <br>
+                <a onclick="RedirectToStokerClass()">Stoker Class</a>
+                <br>
+                <a onclick="RedirectToStrikeClass()">Strike Class</a>
+                <br>
+                <a onclick="RedirectToTidalrClass()">Tidal Class</a>
+                <br>
+                <a onclick="RedirectToTrackerClass()">Tracker Class</a>
+            </div>
+            <br>
+            <div>
+                <a onclick="RedirectToGronckle()">Gronckle</a>
+                <br>
+                <a onclick="RedirectToNadder()">Deadly Nadder</a>
+                <br>
+                <a onclick="RedirectToTT()">Terrible Terror</a>
+            </div>
         </div>
     </body>
 </html>
