Fixed foler- and pagenames, and their redirects

--- a/Wiki/Dragons/dragons.html
+++ b/Wiki/Dragons/dragons.html
@@ -32,7 +32,7 @@
                 <br>
                 <a onclick="RedirectToStrikeClass()">Strike Class</a>
                 <br>
-                <a onclick="RedirectToTidalrClass()">Tidal Class</a>
+                <a onclick="RedirectToTidalClass()">Tidal Class</a>
                 <br>
                 <a onclick="RedirectToTrackerClass()">Tracker Class</a>
             </div>
