Tried to make the language loader work

--- a/Wiki/Dragons/Boulder/Gronckle/gronckle.html
+++ b/Wiki/Dragons/Boulder/Gronckle/gronckle.html
@@ -20,7 +20,7 @@
         <div id="content" class="content">
 
             <header>
-                <h1>Gronckle</h1>
+                <h1><div id="gronckle-page-title"></div>Gronckle</h1>
             </header>
             <p> <!-- Short Introduction to the dragon (1 paragraph, no more, no less.) -->
                 <i><b>The Gronckle</b></i> is a <b>medium-sized 
