made it clearer you are able to click on the classes

--- a/Wiki/Dragons/dragons.html
+++ b/Wiki/Dragons/dragons.html
@@ -22,40 +22,39 @@
                 
             </header>
 
-            <div>
-                <div class="content-heading" onclick="RedirectToDragons()"><a>Dragons</a></div>
-                    <ul class="blocks-list" style="margin-bottom: 10px;">
-                        <li class="blocks-item" onclick="RedirectToBoulderClass()">
-                            <a style="text-align: center;">Boulder Class</a>
-                            <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Boulder_Class.webp">
-                        </li>
-                        <li class="blocks-item" onclick="RedirectToMysteryClass()">
-                            <a>Mystery Class</a>
-                            <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Mystery_Class.webp">
-                        </li>
-                        <li class="blocks-item" onclick="RedirectToSharpClass()">
-                            <a>Sharp Class</a>
-                            <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Sharp_Class.webp">
-                        </li>
-                        <li class="blocks-item" onclick="RedirectToStokerClass()">
-                            <a>Stoker Class</a>
-                            <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Stoker_Class.webp">
-                        </li>
-                        <li class="blocks-item" onclick="RedirectToStrikeClass()">
-                            <a>Strike Class</a>
-                            <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Strike_Class.webp">
-                        </li>
-                        <li class="blocks-item" onclick="RedirectToTidalClass()">
-                            <a style="padding-right: 5px;">Tidal Class</a>
-                            <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Tidal_Class.webp">
-                        </li>
-                        <li class="blocks-item" onclick="RedirectToTrackerClass()">
-                            <a>Tracker Class</a>
-                            <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Tracker_Class.webp">
-                        </li>
-                    </ul>
-                </div>
+            <div> <!-- Classes -->
+                <ul class="blocks-list" style="margin-bottom: 10px;">
+                    <li class="blocks-item" onclick="RedirectToBoulderClass()">
+                        <a style="text-align: center;">Boulder Class</a>
+                        <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Boulder_Class.webp">
+                    </li>
+                    <li class="blocks-item" onclick="RedirectToMysteryClass()">
+                        <a>Mystery Class</a>
+                        <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Mystery_Class.webp">
+                    </li>
+                    <li class="blocks-item" onclick="RedirectToSharpClass()">
+                        <a>Sharp Class</a>
+                        <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Sharp_Class.webp">
+                    </li>
+                    <li class="blocks-item" onclick="RedirectToStokerClass()">
+                        <a>Stoker Class</a>
+                        <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Stoker_Class.webp">
+                    </li>
+                    <li class="blocks-item" onclick="RedirectToStrikeClass()">
+                        <a>Strike Class</a>
+                        <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Strike_Class.webp">
+                    </li>
+                    <li class="blocks-item" onclick="RedirectToTidalClass()">
+                        <a style="padding-right: 5px;">Tidal Class</a>
+                        <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Tidal_Class.webp">
+                    </li>
+                    <li class="blocks-item" onclick="RedirectToTrackerClass()">
+                        <a>Tracker Class</a>
+                        <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Tracker_Class.webp">
+                    </li>
+                </ul>
             </div>
+
             <br>
             <div>
                 <a onclick="RedirectToGronckle()">Gronckle</a>
