Added a few comments

--- a/Wiki/wiki.html
+++ b/Wiki/wiki.html
@@ -21,7 +21,7 @@
                 <h1>How to Own a Dragon</h1>
 
             </header>
-            <div>
+            <div> <!-- Classes -->
                 <div class="content-heading" onclick="RedirectToDragons()"><a>Dragons</a></div>
                     <ul class="blocks-list" style="margin-bottom: 10px;">
                         <li class="blocks-item" onclick="RedirectToBoulderClass()">
