--- a/Wiki/wiki.html
+++ b/Wiki/wiki.html
@@ -22,7 +22,9 @@
 
             </header>
             <div> <!-- Classes -->
-                <div class="content-heading" onclick="RedirectToDragons()"><a>Dragons</a></div>
+                <div class="content-heading" onclick="RedirectToDragons()">
+                    <a>Dragons</a>
+                </div>
                     <ul class="blocks-list" style="margin-bottom: 10px;">
                         <li class="blocks-item" onclick="RedirectToBoulderClass()">
                             <a style="text-align: center;">Boulder Class</a>
@@ -53,7 +55,6 @@
                             <img style="margin-bottom: 7px; padding-top: 2px;" width="180px" height="180px" src="/Assets/Classes/Tracker_Class.webp">
                         </li>
                     </ul>
-                </div>
             </div>
         </div>
     </body>
